--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "description": "app server for hatebu offkai",
   "main": "index.coffee",
   "scripts": {
+    "preinstall": "npm install coffee-script -g",
     "start": "coffee index.coffee",
-    "test": "echo 'test' "
+    "test": "coffee scripts/fetch_hatena_data.coffee"
   },
   "private": true,
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "^1.3.1",
     "config": "^0.4.36",
     "connect-mongo": "^0.4.1",
     "cookie-parser": "^1.1.0",
     "express": "^4.4.3",
     "express-session": "^1.3.1",
+    "mongoose": "^3.8.12",
+    "mongoose-findorcreate": "^0.1.2",
     "morgan": "^1.1.1",
     "passport": "^0.2.0",
     "passport-hatena": "0.0.2",
