--- a/package.json
+++ b/package.json
@@ -13,21 +13,22 @@
   "dependencies": {
     "async": "^0.9.0",
     "body-parser": "^1.3.1",
+    "cheerio": "*",
+    "coffee-script": "*",
     "config": "^0.4.36",
     "connect-mongo": "^0.4.1",
     "cookie-parser": "^1.1.0",
     "express": "^4.4.3",
     "express-session": "^1.3.1",
+    "jade": "*",
     "mongoose": "^3.8.12",
     "mongoose-findorcreate": "^0.1.2",
     "morgan": "^1.1.1",
     "passport": "^0.2.0",
     "passport-hatena": "0.0.2",
-    "xml2js": "^0.4.4",
-    "yaml": "^0.2.3",
-    "jade": "*",
-    "coffee-script": "*",
     "request": "*",
-    "cheerio": "*"
+    "underscore": "^1.6.0",
+    "xml2js": "^0.4.4",
+    "yaml": "^0.2.3"
   }
 }
